--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       </section>
               <!-- Постійні клієнти -->
       <section class="partners">
-        <div container>
+        <div>
         <h2 class="partners-title">Постійні клієнти</h2>
         <ul class="partners-list list">
           <li class="partners-item">
