--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list list">
             <li class="work-img">
-              <img src="./imeges/box-1-min.jpg" alt="верстка" width="370" height="294" />
+              <img src="./imeges/box-1-min.jpg" alt="верстка"/>
+              <div class="work-text-box">
+                <p class="work-sub-text">Десктопні додатки</p>
+              </div>
             </li>
             <li class="work-img">
               <img
@@ -111,9 +114,15 @@
                 width="370"
                 height="294"
               />
+              <div class="work-text-box">
+                <p class="work-sub-text">Мобільні додатки</p>
+              </div>
             </li>
             <li class="work-img">
               <img src="./imeges/box-3-min.jpg" alt="стилізація сайту" width="370" height="294" />
+              <div class="work-text-box">
+                <p class="work-sub-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -294,52 +303,54 @@
           </ul>
         </div>
       </section>
-              <!-- Постійні клієнти -->
+      <!-- Постійні клієнти -->
       <section class="partners">
         <div>
-        <h2 class="partners-title">Постійні клієнти</h2>
-        <ul class="partners-list list">
-          <li class="partners-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon"><use href="./imeges/symbol-defs.svg#icon-Logo"></use></svg>
-            </a>
-          </li>
-          <li class="partner-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon">
-                <use href="./imeges/symbol-defs.svg#icon-Logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon">
-                <use href="./imeges/symbol-defs.svg#icon-Logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon">
-                <use href="./imeges/symbol-defs.svg#icon-Logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon">
-                <use href="./imeges/symbol-defs.svg#icon-Logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners-item">
-            <a class="partner-logo" href="">
-              <svg class="partner-icon">
-                <use href="./imeges/symbol-defs.svg#icon-Logo-5"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+          <h2 class="partners-title">Постійні клієнти</h2>
+          <ul class="partners-list list">
+            <li class="partners-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partner-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners-item">
+              <a class="partner-logo" href="">
+                <svg class="partner-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
