--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <ul class="head-contacts list">
-          <li class="item">            
+          <li class="item">
             <a class="contact-link" href="mailto:info@devstudio.com"
               ><svg class="item-icon" width="16" height="12">
                 <use href="./imeges/symbol-defs.svg#icon-mail"></use></svg
@@ -79,84 +79,90 @@
             </li>
           </ul>
           <ul class="gallery-projects list">
-            <li><a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-1.jpg" alt="Компютер" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Технокряк</h2>
-                <p class="project-item">Веб-сайт</p>
-              </div>
+            <li class="projects-card">
+              <a class="gallery-link" href="">
+                <img class="test" src="./imeges/img-portfolio-1.jpg" alt="Компютер" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-item">Веб-сайт</p>
+                </div>
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
+              </a>                
+            </li>
+            <li>
+              <a class="gallery-link" href="">
+                <img src="./imeges/img-portfolio-2.jpg" alt="Гра в баскетбол" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-item">Дизайн</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-2.jpg" alt="Гра в баскетбол" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                <p class="project-item">Дизайн</p>
-              </div>
+                <img src="./imeges/img-portfolio-3.jpg" alt="Логотип ресторану" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-item">Додаток</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-3.jpg" alt="Логотип ресторану" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Ресторан Seafood</h2>
-                <p class="project-item">Додаток</p>
-              </div>
+                <img src="./imeges/img-portfolio-4.jpg" alt="Навушники" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Проєкт Prime</h2>
+                  <p class="project-item">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-4.jpg" alt="Навушники" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Проєкт Prime</h2>
-                <p class="project-item">Маркетинг</p>
-              </div>
+                <img src="./imeges/img-portfolio-5.jpg" alt="Дві коробочки" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Проєкт Boxes</h2>
+                  <p class="project-item">Додаток</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-5.jpg" alt="Дві коробочки" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Проєкт Boxes</h2>
-                <p class="project-item">Додаток</p>
-              </div>
+                <img src="./imeges/img-portfolio-6.jpg" alt="Монітор компютера" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-item">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-6.jpg" alt="Монітор компютера" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Inspiration has no Borders</h2>
-                <p class="project-item">Веб-сайт</p>
-              </div>
+                <img src="./imeges/img-portfolio-7.jpg" alt="Книга" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Видання Limited Edition</h2>
+                  <p class="project-item">Дизайн</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-7.jpg" alt="Книга" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Видання Limited Edition</h2>
-                <p class="project-item">Дизайн</p>
-              </div>
+                <img src="./imeges/img-portfolio-8.jpg" alt="Бірка" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Проєкт LAB</h2>
+                  <p class="project-item">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-8.jpg" alt="Бірка" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Проєкт LAB</h2>
-                <p class="project-item">Маркетинг</p>
-              </div>
-              </a>
-            </li>
-            <li>
-              <a class="gallery-link" href="">
-              <img src="./imeges/img-portfolio-9.jpg" alt="Робота на ноутбуці" width="370" />
-              <div class="project-text">
-                <h2 class="project-title">Growing Business</h2>
-                <p class="project-item">Додаток</p>
-              </div>
+                <img src="./imeges/img-portfolio-9.jpg" alt="Робота на ноутбуці" width="370" />
+                <div class="project-text">
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-item">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
