--- a/portfolio.html
+++ b/portfolio.html
@@ -81,21 +81,30 @@
           <ul class="gallery-projects list">
             <li class="projects-card">
               <a class="gallery-link" href="">
-                <img class="test" src="./imeges/img-portfolio-1.jpg" alt="Компютер" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-1.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="project-item">Веб-сайт</p>
                 </div>
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
-              </a>                
+              </a>
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-2.jpg" alt="Гра в баскетбол" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-2.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                   <p class="project-item">Дизайн</p>
@@ -104,7 +113,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-3.jpg" alt="Логотип ресторану" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-3.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Ресторан Seafood</h2>
                   <p class="project-item">Додаток</p>
@@ -113,7 +129,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-4.jpg" alt="Навушники" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-4.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт Prime</h2>
                   <p class="project-item">Маркетинг</p>
@@ -122,7 +145,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-5.jpg" alt="Дві коробочки" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-5.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт Boxes</h2>
                   <p class="project-item">Додаток</p>
@@ -131,7 +161,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-6.jpg" alt="Монітор компютера" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-6.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Inspiration has no Borders</h2>
                   <p class="project-item">Веб-сайт</p>
@@ -140,7 +177,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-7.jpg" alt="Книга" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-7.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Видання Limited Edition</h2>
                   <p class="project-item">Дизайн</p>
@@ -149,7 +193,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-8.jpg" alt="Бірка" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-8.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт LAB</h2>
                   <p class="project-item">Маркетинг</p>
@@ -158,7 +209,14 @@
             </li>
             <li>
               <a class="gallery-link" href="">
-                <img src="./imeges/img-portfolio-9.jpg" alt="Робота на ноутбуці" width="370" />
+                <div class="gallery-animation">
+                  <img src="./imeges/img-portfolio-9.jpg" alt="Компютер" width="370" />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="project-text">
                   <h2 class="project-title">Growing Business</h2>
                   <p class="project-item">Додаток</p>
