--- a/portfolio.html
+++ b/portfolio.html
@@ -83,11 +83,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-1.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Технокряк</h2>
@@ -99,11 +101,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-2.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
@@ -115,11 +119,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-3.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Ресторан Seafood</h2>
@@ -131,11 +137,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-4.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт Prime</h2>
@@ -147,11 +155,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-5.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт Boxes</h2>
@@ -163,11 +173,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-6.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Inspiration has no Borders</h2>
@@ -179,11 +191,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-7.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Видання Limited Edition</h2>
@@ -195,11 +209,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-8.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Проєкт LAB</h2>
@@ -211,11 +227,13 @@
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-9.jpg" alt="Компютер" width="370" />
-                  <p class="animation-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                    приватну особу.
-                  </p>
+                  <div class="animation-text">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="project-text">
                   <h2 class="project-title">Growing Business</h2>
