--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button class="modal-btn" data-modal-close></button>
+            <button class="modal-btn" data-modal-close>
+              <svg class="modal-btn-icon" width="18" height="18">
+                <use href="./imeges/symbol-defs.svg#icon-close"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
