--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
           <ul class="work-list list">
             <li class="work-img">
               <img src="./imeges/box-1-min.jpg" alt="верстка" />
-              <div class="work-text-box">
+              <!-- <div class="work-text-box"> -->
                 <p class="work-sub-text">Десктопні додатки</p>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="work-img">
               <img
@@ -123,15 +123,15 @@
                 width="370"
                 height="294"
               />
-              <div class="work-text-box">
+              <!-- <div class="work-text-box"> -->
                 <p class="work-sub-text">Мобільні додатки</p>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="work-img">
               <img src="./imeges/box-3-min.jpg" alt="стилізація сайту" width="370" height="294" />
-              <div class="work-text-box">
+              <!-- <div class="work-text-box"> -->
                 <p class="work-sub-text">Дизайнерські рішення</p>
-              </div>
+              <!-- </div> -->
             </li>
           </ul>
         </div>
