--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-2.jpg" alt="Компютер" width="370" />
@@ -115,7 +115,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-3.jpg" alt="Компютер" width="370" />
@@ -133,7 +133,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-4.jpg" alt="Компютер" width="370" />
@@ -151,7 +151,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-5.jpg" alt="Компютер" width="370" />
@@ -169,7 +169,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-6.jpg" alt="Компютер" width="370" />
@@ -187,7 +187,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-7.jpg" alt="Компютер" width="370" />
@@ -205,7 +205,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-8.jpg" alt="Компютер" width="370" />
@@ -223,7 +223,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="projects-card">
               <a class="gallery-link" href="">
                 <div class="gallery-animation">
                   <img src="./imeges/img-portfolio-9.jpg" alt="Компютер" width="370" />
